syntax = "proto3";

package common_ui;

import "common.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

option java_package = "com.digitald4.common.proto";
option java_outer_classname = "DD4UIProtos";

service GenericService {
  rpc Create(CreateRequest) returns (google.protobuf.Any) {}

  rpc Get(GetRequest) returns (google.protobuf.Any) {}

  rpc List(ListRequest) returns (ListResponse) {}

  rpc Update(UpdateRequest) returns (google.protobuf.Any) {}

  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

service UserService {
  rpc Login(LoginRequest) returns (google.protobuf.Empty) {}

  rpc GetActive(google.protobuf.Empty) returns (common.User) {}

  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

enum DateRange {
  UNSPECIFIED = 0;
  DAY = 1;
  WEEK = 2;
  MONTH = 3;
  CAL_MONTH = 4;
  YEAR = 5;
}

message GPSAddress {
  string address = 1;
	double latitude = 2;
	double longitude = 3;
	string unit = 4;
}

message DataFile {
  int32 id = 1;
  string name = 2;
  string type = 3;
  int32 size = 4;
}

message CreateRequest {
  google.protobuf.Any proto = 1;
}

message GetRequest {
  int32 id = 1;
}

message ListRequest {
  int32 page_size = 1;
  int32 page_token = 2;
	message Filter {
		string column = 1;
    string operan = 2;
    string value = 3;
	}
	repeated Filter filter = 3;
  message OrderBy {
    string column = 1;
    bool desc = 2;
  }
  repeated OrderBy order_by = 4;
}

message ListResponse {
  repeated google.protobuf.Any result = 1;
  int32 total_size = 2;
}

message UpdateRequest {
	int32 id = 1;
  google.protobuf.Any proto = 2;
  google.protobuf.FieldMask update_mask = 3;
}

message DeleteRequest {
	int32 id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}